--- a/start_form.ui
+++ b/start_form.ui
@@ -20,14 +20,14 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>51</y>
+     <y>53</y>
      <width>591</width>
-     <height>31</height>
+     <height>26</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Courier New</family>
+     <family>Times New Roman</family>
      <pointsize>12</pointsize>
      <italic>true</italic>
      <strikeout>false</strikeout>
@@ -41,10 +41,17 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>123</y>
+     <y>134</y>
      <width>591</width>
      <height>26</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>12</pointsize>
+     <italic>true</italic>
+    </font>
    </property>
    <property name="insertPolicy">
     <enum>QComboBox::InsertAtBottom</enum>
@@ -67,14 +74,14 @@
     <rect>
      <x>330</x>
      <y>20</y>
-     <width>161</width>
+     <width>321</width>
      <height>16</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Times New Roman</family>
-     <pointsize>14</pointsize>
+     <pointsize>13</pointsize>
      <weight>75</weight>
      <italic>true</italic>
      <bold>true</bold>
@@ -84,32 +91,19 @@
     <string>Последние соревнования:</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="Button_R">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>150</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Рейтинг</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>340</x>
      <y>100</y>
-     <width>131</width>
+     <width>291</width>
      <height>16</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Times New Roman</family>
-     <pointsize>14</pointsize>
+     <pointsize>13</pointsize>
      <weight>75</weight>
      <italic>true</italic>
      <bold>true</bold>
@@ -123,41 +117,37 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>150</y>
+     <y>161</y>
      <width>101</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Открыть</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="Button_new">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>53</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Новые</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>20</y>
-     <width>91</width>
-     <height>16</height>
+     <height>24</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Times New Roman</family>
-     <pointsize>14</pointsize>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <italic>true</italic>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Открыть</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>13</pointsize>
      <weight>75</weight>
      <italic>true</italic>
      <bold>true</bold>
@@ -165,19 +155,6 @@
    </property>
    <property name="text">
     <string>Соревнования:</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="Button_old">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>120</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Архив</string>
    </property>
   </widget>
   <widget class="Line" name="line">
@@ -247,12 +224,92 @@
      <x>10</x>
      <y>200</y>
      <width>741</width>
-     <height>31</height>
+     <height>24</height>
     </rect>
    </property>
    <property name="value">
     <number>24</number>
    </property>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>53</y>
+     <width>131</width>
+     <height>131</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item>
+     <widget class="QPushButton" name="Button_new">
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <italic>true</italic>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Новые</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>1</number>
+      </property>
+      <item>
+       <widget class="QPushButton" name="Button_old">
+        <property name="font">
+         <font>
+          <family>Times New Roman</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <italic>true</italic>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Архив</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="Button_R">
+        <property name="font">
+         <font>
+          <family>Times New Roman</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <italic>true</italic>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Рейтинг</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
