--- a/start_form.ui
+++ b/start_form.ui
@@ -41,7 +41,7 @@
    <property name="geometry">
     <rect>
      <x>153</x>
-     <y>132</y>
+     <y>124</y>
      <width>580</width>
      <height>26</height>
     </rect>
@@ -179,7 +179,7 @@
     <rect>
      <x>10</x>
      <y>200</y>
-     <width>741</width>
+     <width>717</width>
      <height>24</height>
     </rect>
    </property>
@@ -263,16 +263,19 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>153</x>
-     <y>159</y>
+     <y>150</y>
      <width>581</width>
-     <height>26</height>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QLabel" name="label_4">
       <property name="sizePolicy">
