--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -2762,7 +2762,7 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>5</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
@@ -2770,7 +2770,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>494</height>
+       <height>501</height>
       </rect>
      </property>
      <attribute name="label">
@@ -2781,9 +2781,9 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-88</y>
-       <width>225</width>
-       <height>565</height>
+       <y>0</y>
+       <width>222</width>
+       <height>534</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3156,7 +3156,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>494</height>
+       <height>501</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3612,7 +3612,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>494</height>
+       <height>501</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3623,8 +3623,8 @@
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>215</width>
-        <height>221</height>
+        <width>221</width>
+        <height>191</height>
        </rect>
       </property>
       <property name="font">
@@ -3637,128 +3637,115 @@
       <property name="title">
        <string>Фильтр</string>
       </property>
-      <widget class="QComboBox" name="comboBox_filter_group">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>40</y>
-         <width>191</width>
-         <height>26</height>
-        </rect>
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <property name="spacing">
+        <number>1</number>
        </property>
-       <property name="editable">
-        <bool>true</bool>
+       <property name="leftMargin">
+        <number>3</number>
        </property>
-      </widget>
-      <widget class="QLabel" name="label_14">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>22</y>
-         <width>91</width>
-         <height>16</height>
-        </rect>
+       <property name="topMargin">
+        <number>3</number>
        </property>
-       <property name="font">
-        <font>
-         <family>Courier New</family>
-         <pointsize>14</pointsize>
-         <italic>true</italic>
-        </font>
+       <property name="rightMargin">
+        <number>3</number>
        </property>
-       <property name="text">
-        <string>по группам</string>
+       <property name="bottomMargin">
+        <number>3</number>
        </property>
-      </widget>
-      <widget class="QComboBox" name="comboBox_filter_played">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>90</y>
-         <width>191</width>
-         <height>26</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_25">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>68</y>
-         <width>121</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Courier New</family>
-         <pointsize>14</pointsize>
-         <italic>true</italic>
-        </font>
-       </property>
-       <property name="text">
-        <string>по результатам</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_26">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>120</y>
-         <width>81</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Courier New</family>
-         <pointsize>14</pointsize>
-         <italic>true</italic>
-        </font>
-       </property>
-       <property name="text">
-        <string>по игроку</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="Button_filter">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>178</y>
-         <width>73</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Фильтр</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="Button_reset_filter">
-       <property name="geometry">
-        <rect>
-         <x>124</x>
-         <y>180</y>
-         <width>73</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Сброс</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="comboBox_find_name">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>140</y>
-         <width>191</width>
-         <height>26</height>
-        </rect>
-       </property>
-       <property name="editable">
-        <bool>true</bool>
-       </property>
-      </widget>
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <property name="spacing">
+          <number>1</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="label_14">
+           <property name="font">
+            <font>
+             <family>Courier New</family>
+             <pointsize>14</pointsize>
+             <italic>true</italic>
+            </font>
+           </property>
+           <property name="text">
+            <string>по группам</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="comboBox_filter_group">
+           <property name="editable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_25">
+           <property name="font">
+            <font>
+             <family>Courier New</family>
+             <pointsize>14</pointsize>
+             <italic>true</italic>
+            </font>
+           </property>
+           <property name="text">
+            <string>по результатам</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="comboBox_filter_played"/>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_26">
+           <property name="font">
+            <font>
+             <family>Courier New</family>
+             <pointsize>14</pointsize>
+             <italic>true</italic>
+            </font>
+           </property>
+           <property name="text">
+            <string>по игроку</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="comboBox_find_name">
+           <property name="font">
+            <font>
+             <pointsize>12</pointsize>
+            </font>
+           </property>
+           <property name="editable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_9">
+         <property name="spacing">
+          <number>1</number>
+         </property>
+         <item>
+          <widget class="QPushButton" name="Button_filter">
+           <property name="text">
+            <string>Фильтр</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Button_reset_filter">
+           <property name="text">
+            <string>Сброс</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
      </widget>
      <widget class="QLabel" name="label_16">
       <property name="geometry">
@@ -3898,7 +3885,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>494</height>
+       <height>501</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3911,7 +3898,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>494</height>
+       <height>501</height>
       </rect>
      </property>
      <attribute name="label">
@@ -4160,7 +4147,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>494</height>
+       <height>501</height>
       </rect>
      </property>
      <attribute name="label">
