--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -3565,8 +3565,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>237</width>
+       <height>494</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3578,8 +3578,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>196</width>
-       <height>534</height>
+       <width>225</width>
+       <height>565</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3952,7 +3952,7 @@
        <x>0</x>
        <y>0</y>
        <width>237</width>
-       <height>501</height>
+       <height>494</height>
       </rect>
      </property>
      <attribute name="label">
@@ -4116,9 +4116,9 @@
        <property name="geometry">
         <rect>
          <x>129</x>
-         <y>42</y>
+         <y>46</y>
          <width>83</width>
-         <height>27</height>
+         <height>23</height>
         </rect>
        </property>
        <property name="font">
@@ -4135,10 +4135,15 @@
        <property name="geometry">
         <rect>
          <x>3</x>
-         <y>42</y>
+         <y>47</y>
          <width>124</width>
-         <height>26</height>
+         <height>21</height>
         </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
        </property>
       </widget>
       <widget class="QLabel" name="label_13">
@@ -4512,8 +4517,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>237</width>
+       <height>494</height>
       </rect>
      </property>
      <attribute name="label">
@@ -4785,8 +4790,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>237</width>
+       <height>494</height>
       </rect>
      </property>
      <attribute name="label">
@@ -4798,8 +4803,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>237</width>
+       <height>494</height>
       </rect>
      </property>
      <attribute name="label">
@@ -5047,8 +5052,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>237</width>
+       <height>494</height>
       </rect>
      </property>
      <attribute name="label">
